[package]
name = "brew-helper"
description = "A little brew helper to remove non needed formulas"
version = "0.0.1"
license = "MIT"
repository = "https://github.com/secwall/brew-helper"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[profile.release]
strip = true
opt-level = "z"
lto = true
